am so boring to devlop this gen
