# internal/dto/AuthorCardDto.go
@@ -1,6 +1,6 @@
 package dto
 
 type AuthorCardDto struct {
-	ProfileImages string `json:"profileImages"`
-	UserName      string `json:"userName"`
+	ProfileImage string `json:"profileImage"`
+	UserName     string `json:"userName"`
 }
