# internal/dto/RecentPostBlogDto.go
@@ -1,7 +1,8 @@
 package dto
 
 type RecentPostBlogDto struct {
-	BlogTitle string
-	Slug      string
-	TimeAgo   string
+	BlogTitle string  `json:"blogTitle"`
+	Slug      string  `json:"slug"`
+	TimeAgo   string  `json:"timeAgo"`
+	Author    UserDto `json:"author"`
 }
